--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -99,10 +99,12 @@
 
 @section Styles {
     <link href="/Xem.css/KhoaHoc/" rel="stylesheet" />
+    <link href="/Plugin/highlight/hightlight.css" rel="stylesheet" />
 }
 
 @section Scripts {
     <script src="/Xem.js/KhoaHoc/"></script>
+    <script src="/Plugin/highlight/highlight.js"></script>
     <script>
         maKhoaHoc = '@Model.ma';
         tieuDe = '@Html.Raw(Model.ten)' + ' - LCTMoodle';
