--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -79,10 +79,13 @@
             @if (@Model.tapTin != null)
             {
                 <section class="tap-tin">
-                    <a href="/LayTapTin/BaiVietDienDan_TapTin/@Model.tapTin.ma">
+                    <a @if (TapTinHelper.coHoTroXem(Model.tapTin.duoi)) {     
+                        @: data-chuc-nang="mo-popup-tap-tin"
+                    } href="/LayTapTin/BaiVietDienDan_TapTin/@Model.tapTin.ma">
                         <img src="/LayHinh/BaiVietDienDan_TapTin/@Model.tapTin.ma" />
                         <span>@Model.tapTin.ten</span>
                     </a>
+
                 </section>
             }
         </section>
