--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -911,6 +911,12 @@ body.dang-tai-lct header .top-header {
 
     /*#endregion */
 
+    /*#region Hộp tin nhắn */
+
+
+
+    /*#endregion */
+
 /*#endregion */
 
 /*#region Bottom header */
