--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -67,7 +67,24 @@
                     {
 
                         <ul class="da-dang-nhap">
-                            <li><a href="#"><i class="pe-7s-chat"></i></a></li>
+                            <li>
+                                <a href="#" data-mo-doi-tuong="hop-tin-nhan">
+                                    <i class="pe-7s-chat"></i>
+                                </a>
+                                <section class="hop-tin-nhan">
+                                    <ul>
+                                        <li>
+                                            <div class="hinh-dai-dien">
+                                                <img src="HinhDaiDienMacDinh.jpg/NguoiDung" />
+                                            </div>
+                                            <div class="tin-nhan">
+                                                <div class="noi-dung">Tin nhắn mới</div>
+                                                <div class=" thoi-gian">15/7/2015</div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </li>
                             <li><a href="#"><i class="pe-7s-global"></i></a></li>
                             <li>
                                 <a href="javascript:void(0)" data-mo-doi-tuong="HopDieuKhien">
