--- a/LCTMoodle/Views/TrangChu/Index.cshtml
+++ b/LCTMoodle/Views/TrangChu/Index.cshtml
@@ -27,7 +27,7 @@
     <a href="/HoiDap" class="tieu-de">
         Danh sách câu hỏi
     </a>
-    <section class="noi-dung">
+    <section class="noi-dung danh-sach-cau-hoi">
         <ul class="danh-sach">@Html.Partial("~/Views/HoiDap/_DanhSachCauHoi.cshtml", dsCauHoi)</ul>
     </section>
 </article>
