--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -63,7 +63,7 @@
                 </section>
                 <section class="bai-viet">
                     <section class="thoi-gian">
-                        @Model.thoiDiemTao.Value.ToString("H:mm d/M/yyyy")
+                        @View.HienThiThoiGian(Model.thoiDiemTao)
                     </section>
                 </section>
             </section>            
