--- a/LCTMoodle/Views/BangDiem/_Item.cshtml
+++ b/LCTMoodle/Views/BangDiem/_Item.cshtml
@@ -1,4 +1,5 @@
-﻿@model DTOLayer.CotDiemDTO
+﻿@using LCTMoodle.LCTView;
+@model DTOLayer.CotDiemDTO
 
 <tr class="item-cot-diem" data-doi-tuong="item-cot-diem" data-ma="@Model.ma">
     <td></td>
